@@ -2,6 +2,7 @@ Version 3.9.16
 - Check environment variable FLEXCC_INCLUDE_PATH for included files
 - Better relative path finding for include files thanks to David Betz
 - Added register keyword for C
+- Moved P2 CLKFREQ and CLKMODE longs down to initial hub memory
 
 Version 3.9.15
 - Fixed abort/catch in P2
